// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros reducer createMacro action should add a new macro to the state 1`] = `
Object {
  "1": Object {
    "actions": Array [
      Object {
        "arguments": Object {
          "tags": "refund",
        },
        "name": "addTags",
        "title": "Add Refund Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "tags": "refund accepted",
        },
        "name": "addTags",
        "title": "Add Refund Accepted Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "body_html": "<div>Hello {{ticket.customer.name}},</div><br/><div>Thanks for placing an order with our company.</div><br/><div>Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.</div><br/><div>If you have any questions, concerns or comments, please don’t hesitate to reach out.</div><br/><div>Have a great day and thanks for using our service!</div><br/><div>Sincerely,</div><div>{{current_user.name}}</div>",
          "body_text": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        },
        "description": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        "name": "setResponseText",
        "title": "Set Response Text",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "headers": Array [
            Object {
              "editable": false,
              "key": "X_API_KEY",
              "value": "9298jjdhdjkh393jhajkhdjashuurh",
            },
            Object {
              "editable": false,
              "key": "content-type",
              "value": "application/json",
            },
          ],
          "method": "GET",
          "params": Array [
            Object {
              "editable": false,
              "key": "user_id",
              "value": "{ticket.customer.id}",
            },
          ],
          "url": "https://httpbin.org/post",
        },
        "description": "Refund the user's last month ",
        "name": "http",
        "title": "Refund Last Month",
        "type": "user",
      },
    ],
    "created_datetime": "2017-08-01T17:56:51.190187+00:00",
    "id": 1,
    "language": null,
    "name": "Waive Fee",
    "updated_datetime": "2017-08-01T17:56:51.190199+00:00",
    "usage": 1,
  },
}
`;

exports[`macros reducer deleteMacro action should delete a macro from the state 1`] = `Object {}`;

exports[`macros reducer fetchMacro action should add a new macro to the state 1`] = `
Object {
  "1": Object {
    "actions": Array [
      Object {
        "arguments": Object {
          "tags": "refund",
        },
        "name": "addTags",
        "title": "Add Refund Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "tags": "refund accepted",
        },
        "name": "addTags",
        "title": "Add Refund Accepted Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "body_html": "<div>Hello {{ticket.customer.name}},</div><br/><div>Thanks for placing an order with our company.</div><br/><div>Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.</div><br/><div>If you have any questions, concerns or comments, please don’t hesitate to reach out.</div><br/><div>Have a great day and thanks for using our service!</div><br/><div>Sincerely,</div><div>{{current_user.name}}</div>",
          "body_text": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        },
        "description": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        "name": "setResponseText",
        "title": "Set Response Text",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "headers": Array [
            Object {
              "editable": false,
              "key": "X_API_KEY",
              "value": "9298jjdhdjkh393jhajkhdjashuurh",
            },
            Object {
              "editable": false,
              "key": "content-type",
              "value": "application/json",
            },
          ],
          "method": "GET",
          "params": Array [
            Object {
              "editable": false,
              "key": "user_id",
              "value": "{ticket.customer.id}",
            },
          ],
          "url": "https://httpbin.org/post",
        },
        "description": "Refund the user's last month ",
        "name": "http",
        "title": "Refund Last Month",
        "type": "user",
      },
    ],
    "created_datetime": "2017-08-01T17:56:51.190187+00:00",
    "id": 1,
    "language": null,
    "name": "Waive Fee",
    "updated_datetime": "2017-08-01T17:56:51.190199+00:00",
    "usage": 1,
  },
}
`;

exports[`macros reducer fetchMacros action should add the macros to the state 1`] = `
Object {
  "1": Object {
    "actions": Array [
      Object {
        "arguments": Object {
          "tags": "refund",
        },
        "name": "addTags",
        "title": "Add Refund Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "tags": "refund accepted",
        },
        "name": "addTags",
        "title": "Add Refund Accepted Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "body_html": "<div>Hello {{ticket.customer.name}},</div><br/><div>Thanks for placing an order with our company.</div><br/><div>Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.</div><br/><div>If you have any questions, concerns or comments, please don’t hesitate to reach out.</div><br/><div>Have a great day and thanks for using our service!</div><br/><div>Sincerely,</div><div>{{current_user.name}}</div>",
          "body_text": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        },
        "description": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        "name": "setResponseText",
        "title": "Set Response Text",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "headers": Array [
            Object {
              "editable": false,
              "key": "X_API_KEY",
              "value": "9298jjdhdjkh393jhajkhdjashuurh",
            },
            Object {
              "editable": false,
              "key": "content-type",
              "value": "application/json",
            },
          ],
          "method": "GET",
          "params": Array [
            Object {
              "editable": false,
              "key": "user_id",
              "value": "{ticket.customer.id}",
            },
          ],
          "url": "https://httpbin.org/post",
        },
        "description": "Refund the user's last month ",
        "name": "http",
        "title": "Refund Last Month",
        "type": "user",
      },
    ],
    "created_datetime": "2017-08-01T17:56:51.190187+00:00",
    "id": 1,
    "language": null,
    "name": "Waive Fee",
    "updated_datetime": "2017-08-01T17:56:51.190199+00:00",
    "usage": 1,
  },
  "2": Object {
    "actions": Array [
      Object {
        "arguments": Object {
          "tags": "rejectedTag",
        },
        "name": "addTags",
        "title": "Add Rejected Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "body_html": "<div>Thanks for your patience and I'm so sorry to hear you are unable to make your reservation!</div><br/><div>Subject to our cancellation policy your membership with us will run out at the end of the month,</div><div>and you will be billed one last time then.</div>",
          "body_text": "Thanks for your patience and I'm so sorry to hear you are unable to make your reservation!

Subject to our cancellation policy your membership with us will run out at the end of the month,
and you will be billed one last time then.",
        },
        "description": "Thanks for your patience and I'm so sorry to hear you are unable to make your reservation!

Subject to our cancellation policy your membership with us will run out at the end of the month,
and you will be billed one last time then.",
        "name": "setResponseText",
        "title": "Set Response Text",
        "type": "user",
      },
    ],
    "created_datetime": "2017-08-01T17:56:51.212461+00:00",
    "id": 2,
    "name": "Do Not Waive Fee",
    "updated_datetime": "2017-08-01T17:56:51.212472+00:00",
    "usage": 3,
  },
  "3": Object {
    "actions": Array [
      Object {
        "arguments": Object {
          "body_html": "<div>Hello {{ticket.customer.name}},</div><br/><div>Unfortunately, it has come to our attention that you never received your order. As a result, we will immediately have this order canceled and issue a refund. We will be reaching out to ||merchant_name|| for an explanation as to why your order was not delivered. We sincerely apologize for the inconvenience.</div><br/><div>Please allow 1-5 business days for any possible charges to reconcile with your account. If any credits were used during this transaction, they will return to your account and be available for use on your next order.</div><br/><div>If you have any questions, concerns or comments, please don’t hesitate to reach out.</div><br/><div>Have a great day and thanks for using our service.</div><br/><div>Sincerely,</div><div>{{current_user.name}}</div>",
          "body_text": "Hello {{ticket.customer.name}},

Unfortunately, it has come to our attention that you never received your order. As a result, we will immediately have this order canceled and issue a refund. We will be reaching out to ||merchant_name|| for an explanation as to why your order was not delivered. We sincerely apologize for the inconvenience.

Please allow 1-5 business days for any possible charges to reconcile with your account. If any credits were used during this transaction, they will return to your account and be available for use on your next order.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service.

Sincerely,
{{current_user.name}}",
        },
        "description": "Hello {{ticket.customer.name}},

Unfortunately, it has come to our attention that you never received your order. As a result, we will immediately have this order canceled and issue a refund. We will be reaching out to ||merchant_name|| for an explanation as to why your order was not delivered. We sincerely apologize for the inconvenience.

Please allow 1-5 business days for any possible charges to reconcile with your account. If any credits were used during this transaction, they will return to your account and be available for use on your next order.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service.

Sincerely,
{{current_user.name}}",
        "name": "setResponseText",
        "title": "Set Response Text",
        "type": "user",
      },
    ],
    "created_datetime": "2017-08-01T17:56:51.220733+00:00",
    "id": 3,
    "name": "Cancel Order",
    "updated_datetime": "2017-08-01T17:56:51.220744+00:00",
    "usage": 0,
  },
}
`;

exports[`macros reducer updateMacro action should replace an existing macro in the state 1`] = `
Object {
  "1": Object {
    "actions": Array [
      Object {
        "arguments": Object {
          "tags": "refund",
        },
        "name": "addTags",
        "title": "Add Refund Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "tags": "refund accepted",
        },
        "name": "addTags",
        "title": "Add Refund Accepted Tag",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "body_html": "<div>Hello {{ticket.customer.name}},</div><br/><div>Thanks for placing an order with our company.</div><br/><div>Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.</div><br/><div>If you have any questions, concerns or comments, please don’t hesitate to reach out.</div><br/><div>Have a great day and thanks for using our service!</div><br/><div>Sincerely,</div><div>{{current_user.name}}</div>",
          "body_text": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        },
        "description": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
        "name": "setResponseText",
        "title": "Set Response Text",
        "type": "user",
      },
      Object {
        "arguments": Object {
          "headers": Array [
            Object {
              "editable": false,
              "key": "X_API_KEY",
              "value": "9298jjdhdjkh393jhajkhdjashuurh",
            },
            Object {
              "editable": false,
              "key": "content-type",
              "value": "application/json",
            },
          ],
          "method": "GET",
          "params": Array [
            Object {
              "editable": false,
              "key": "user_id",
              "value": "{ticket.customer.id}",
            },
          ],
          "url": "https://httpbin.org/post",
        },
        "description": "Refund the user's last month ",
        "name": "http",
        "title": "Refund Last Month",
        "type": "user",
      },
    ],
    "created_datetime": "2017-08-01T17:56:51.190187+00:00",
    "id": 1,
    "language": null,
    "name": "bar",
    "updated_datetime": "2017-08-01T17:56:51.190199+00:00",
    "usage": 1,
  },
}
`;
